samples/_failures_safe/1761201371_6e5abc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2852480b.c: In function ‘main’:
./samples/SAFE/__tmp_2852480b.c:139:5: error: expected declaration or statement at end of input
  139 |     printf("Log Analyzer\n");
      |     ^~~~~~
